--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "feedbox-mobile-app",
+  "name": "emergency-alert-system",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
