--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "ryanneozx.github.io/ryanneozx.github.io,",
+  "homepage": "https://ryanneozx.github.io/ryanneozx.github.io,",
   "name": "my-daisyui-app",
   "private": true,
   "version": "0.0.0",
